changing pictures sizes

--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -13,7 +13,7 @@
         {% for item in item_list %}
             <div class="row align-items-center m-3">
                 <div class="col-md-3 offset-md-4">
-                    <img class="card"  src="{{ item.item_image }}"/>
+                    <img height="200" width="250" class="card"  src="{{ item.item_image }}"/>
                 </div>
                 <div class="col-md-2">
                     <h3>{{ item.item_name }}</h3>
