--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -20,6 +20,7 @@
                                 </div>
                             {% endfor %}
                             <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-success" href="{% url 'register' %}">Register</a>
                         </form>
                     </div>
                 </div>
