--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -10,6 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'food:index' %}">FoodApp</a>
+        <a class="navbar-brand" href="https://www.linkedin.com/in/hachemmohamad/" style="color: red">Mohamad-HACHEM</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
