--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="{{ object.item_image }}" class="card"/>
+                    <img height="200" width="250" src="{{ object.item_image }}" class="card"/>
                 </div>
                 <div class="col-md-6">
                     <h1>{{ object.item_name }}</h1>
